--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ h2 {
     color: rgb(130, 83, 40);
 }
 
-p { 
+p {
     color: rgb(130, 83, 40);
 }
 
@@ -70,6 +70,12 @@ label[for="uploadInput"] img:hover {
 
 label[for="uploadButton"] img:hover {
     cursor: pointer;
+}
+
+.fileNameDisplay {
+    margin-top: 10px;
+    font-weight: bold;
+    color: rgb(130, 83, 40);
 }
 
 /* Navbar styling */
